Moved the things to remember and the experience address to the bottom of the page. Fixed the issue where the share buttons were getting cut off

--- a/app/assets/stylesheets/expShow/style.css.scss
+++ b/app/assets/stylesheets/expShow/style.css.scss
@@ -3246,3 +3246,12 @@ margin-bottom:0px;
 .notification-messages.info .iconholder i{
   color:#f35958
 }
+
+
+.stButton .stButton_gradient {
+  height: 24px !important;
+}
+
+.stButton .stFb, .stButton .stTwbutton, .stButton .stMainServices {
+  height: 24px !important;
+}
